@@ -152,9 +152,6 @@ sub _populateGroups
         return [] unless ($sambaMod->isEnabled() and $sambaMod->isProvisioned());
 
         my @groups;
-        my $domainUsersGroup = $sambaMod->ldap->domainUsersGroup();
-
-        push (@groups, { value => $domainUsersGroup->get('samAccountName'), printableValue => __('All domain users') });
         foreach my $group (@{$sambaMod->securityGroups()}) {
             push (@groups, { value => $group->dn(), printableValue => $group->get('samAccountName') });
         }
@@ -537,8 +534,6 @@ sub rules
     my $objectMod = $self->global()->modInstance('objects');
     my $userMod = $self->global()->modInstance('samba');
     my $usersEnabled = $userMod->isEnabled();
-    my $domainUsersGroup = $usersEnabled ?
-        $userMod->ldap->domainUsersGroup->get('samAccountName') : '';
 
     # we dont use row ids to make rule id shorter bz squid limitations with id length
     my $number = 0;
@@ -562,21 +557,11 @@ sub rules
                 next unless ($usersEnabled);
                 my $group = $source->value();
                 $rule->{group} = $group;
-                my $users;
-                if ($group eq $domainUsersGroup) {
-                    $users = $userMod->users();
-                } else {
-                    $users = $userMod->objectFromDN($group)->users();
-                }
-
+                my $users = $userMod->objectFromDN($group)->users();
                 if (not @{$users}) {
                     # ignore rules for empty groups
                     next;
                 }
-                $rule->{users} = [ (map {
-                                          my $name =  $_->name();
-                                          lc $name;
-                                      } @{$users}) ];
             } elsif ($mode eq $self->parentModule->AUTH_MODE_EXTERNAL_AD()) {
                 $rule->{adDN} = $source->value();
             }
