@@ -104,7 +104,7 @@ sub _rulesACLs
 {
   my %args = @_;
   my @rules = @{ $args{rules} };
-  my $realm = $args{realm};
+  my $authModeExternalAD = $args{authModeExternalAD};
   my %seenACL;
 
   foreach my $rule (@rules) {
@@ -136,13 +136,10 @@ sub _rulesACLs
             my $acl = "acl $aclName src";
             _printSplitAcl($acl, $rule->{addresses});
         } elsif ($group) {
-            # escape user names
-            my @users = map { $_ =~ s{ }{\\ }g; $_ } @{$rule->{users}};
-            if ($realm) {
-            @users = map { $_ . '@' . $realm } @users;
-        }
-            my $acl = "acl $aclName proxy_auth";
-            _printSplitAcl($acl, \@users);
+            my ($groupName) = $group =~ m/^CN=(.*?),/;
+            # escape group name
+            $groupName =~ s{ }{\\ }g;
+            $m->print("acl $aclName external ldapgroup $groupName\n");
         } elsif ($adDN) {
             my $acl = "acl $aclName external InetGroup";
             _printSplitAcl($acl, [ $adDN ]);
@@ -175,6 +172,7 @@ sub _rulesACLs
 <%args>
 @rules
 %profilesRulesStubs
+$authModeExternalAD
 </%args>
 % foreach my $rule (@rules) {
 <%perl>
@@ -207,7 +205,12 @@ sub _rulesACLs
         $policy = 'allow';
     }  else {
         # expand rules stubs
-        my $baseAcls = "$timeAcls $acl ";
+        my $baseAcls;
+        if ($group and not $authModeExternalAD) {
+            $baseAcls = "$timeAcls authorized $acl ";
+        } else {
+            $baseAcls = "$timeAcls $acl ";
+        }
         foreach my $stub (@{$rulesStubs  }) {
             my $ruleStr = $stub->{type};
             $ruleStr .= ' ' . $stub->{policy};
@@ -219,6 +222,10 @@ sub _rulesACLs
         # dont produce normal rules in this case
         next;
     }
+   }
+
+   if ($group and not $authModeExternalAD) {
+      $acl = "authorized $acl";
    }
 </%perl>
 http_access <% $policy %> <% $timeAcls %> <% $acl %>
@@ -270,8 +277,11 @@ auth_param negotiate children 10
 auth_param negotiate keep_alive on
 % } else {
 auth_param basic realm Zentyal HTTP proxy
-auth_param basic program /usr/lib/squid3/basic_ldap_auth -v 3 -b <% $dn %> -f "(&(samAccountName=%s)(objectclass=posixAccount))" -p 3268 -D <% $roDn %> -w <% $roPasswd %> -P
+external_acl_type ldapgroup  ipv4 %LOGIN /usr/lib/squid3/ext_ldap_group_acl -v3 -b <% $dn %>   -p 3268 -D <% $roDn %> -w <% $roPasswd %> -P -F "(&(samAccountName=%s)(objectclass=user))" -f  "(&(samAccountName=%g)(objectclass=group)(member=%u))"
+auth_param basic program /usr/lib/squid3/basic_ldap_auth -v3 -b <% $dn %> -f "(&(samAccountName=%s)(objectclass=user))" -p 3268 -D <% $roDn %> -w <% $roPasswd %> -P
 % }
+
+
 acl_uses_indirect_client on
 acl authorized proxy_auth REQUIRED
 
@@ -319,11 +329,14 @@ external_acl_type InetGroup ipv4 children=5 \
 ##
 ## ACLs from model rules
 ##
-% _rulesACLs(rules => \@rules, realm => $realm );
+% _rulesACLs(rules => \@rules,  authModeExternalAD => $authModeExternalAD );
 ##
 ## Access
 ##
-<& .rulesAccess, rules => \@rules, profilesRulesStubs => $filterProfiles{rulesStubs} &>
+<& .rulesAccess, rules => \@rules,
+                 authModeExternalAD => $authModeExternalAD,
+                 profilesRulesStubs => $filterProfiles{rulesStubs}
+&>
 
 ##
 ## Default policy
