@@ -1,3 +1,5 @@
+HEAD
+	+ Added dynamical group authorization
 3.5.3
 	+ Fix exception accesing the access rules model when samba not provisioned
 3.5.2
